Cursor changed and spacing fixed on Info Display

--- a/src/pages/Select/Displays/styles/infoDisplay.css
+++ b/src/pages/Select/Displays/styles/infoDisplay.css
@@ -22,7 +22,7 @@
     font-size: 15px;
     display: flex;
     max-height: 545px;
-    cursor:grab;
+    cursor:text;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
